WebGPU layers don't show up sometimes https://bugs.webkit.org/show_bug.cgi?id=200752

Reviewed by Dean Jackson.

Ensure HTML canvas is properly notified of WebGPU updates. Fixes alpha WebGPU MotionMark benchmark no-show issue.

Normal WebGPU behavior unaffected and covered by existing tests.

* Modules/webgpu/GPUCanvasContext.cpp:
(WebCore::GPUCanvasContext::configureSwapChain):
(WebCore::GPUCanvasContext::reshape):
* Modules/webgpu/WHLSL/Metal/WHLSLNativeFunctionWriter.cpp:
(WebCore::WHLSL::Metal::inlineNativeFunction):
* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* html/canvas/GPUBasedCanvasRenderingContext.cpp: Added.
(WebCore::GPUBasedCanvasRenderingContext::GPUBasedCanvasRenderingContext):
(WebCore::GPUBasedCanvasRenderingContext::htmlCanvas const):
(WebCore::GPUBasedCanvasRenderingContext::notifyCanvasContentChanged):
* html/canvas/GPUBasedCanvasRenderingContext.h:
(WebCore::GPUBasedCanvasRenderingContext::GPUBasedCanvasRenderingContext): Deleted.
* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::reshape):
(WebCore::WebGLRenderingContextBase::htmlCanvas): Deleted.
* html/canvas/WebGLRenderingContextBase.h:
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::contentChanged):


Canonical link: https://commits.webkit.org/214634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248879 268f45cc-cd09-0410-ab3c-d52691b4dbfc